Mar. 17 2014
Added an XCode project
Added a safe stdin reader function mb_gets
Fixed a crash bug in INPUT function

Feb. 17 2014
Added mod by zero processing

Feb. 16 2014
Fixed a crash bug in _core_for, thanks to mummylauncher for pointing it out

Jul. 19 2013
Fixed a crash bug in _execute_statement, thanks to Jon Mayo for pointing it out

Feb. 25 2013
Fixed a cross routine multi-statement execution bug, thanks to Bruce Kendall for pointing it out
Fixed a memory corruption bug when loading a script file

Jan. 9 2013
Fixed a crash bug when using EDIT command

Dec. 14 2012
Added an invalid expression error handling
Added an out of memory error handling

Dec. 5 2012
Fixed a minus calculation bug, thanks to Bill Walker for pointing it out

Nov. 14 2012
Fixed a cross routine RETURN bug, thanks to Bruce Kendall for pointing it out

Sep. 12 2012
Fixed a bug in ASC
Fixed a label parsing, jumping bug, thanks to Ahmad Hawwash for pointing above two issues out
Fixed a crash bug in IF statement
Added divide by zero processing
Added calculation error raising

Sep. 1 2012
Fixed a redisposing bug when retrieving a string argument, thanks to Ahmad Hawwash for pointing it out
Fixed a memory leak after retrieving a composited string argument

Aug. 29 2012
Modified an odd string comparison behavior, thanks to Matthias Nott for testing it out
Added a warning system, disabled warning as default
Improved compatibility with GCC

Aug. 3 2012
Implemented memory occupation statistics
Improved compatibility on 64bit systems
Fixed some warnings under a stricter mode

Jul. 21 2012
Added a compatibility macro for PRINT a newline
Added an mb_attempt_func_end C API
Fixed a unary minus symbol parsing bug

Jul. 19 2012
Fixed a crash bug caused by a mistake in calculation priority table, thanks to Bruce Kendall for pointing it out

Jul. 10 2012
Implemented KILL command
Fixed a negative calculation bug
Added an invalid identifier usage error handling
Avoided some warnings on gcc

Jul. 5 2012